Clean up Readme some more
Information section may be wrong, removing for now as it's probably not needed.  If I need it in the future, I'll just re-add.

Changed wording on contributing from "Dev" branch to "master" as I don't currently have a Dev branch :3